--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     environment:
       AWS_SDK_LOAD_CONFIG: 1
       AWS_PROFILE: "mwbops"
+      CLUSTER: "nebula-mb-prod"
+      PERCENTAGE: 75
+      TYPE: "CPUUtilization"
     volumes:
       - "~/.aws/:/root/.aws/"
     tty: true
